# QtTsAutoTranslator

./: CMakeLists.txt
include/: logoutputwidget.h  mainwindow.h  translationservice.h  translationsettingsdialog.h  tsdetailwidget.h  tsfilehandler.h  tstreewidget.h
src/: logoutputwidget.cpp  mainwindow.cpp  translationservice.cpp  translationsettingsdialog.cpp  tsdetailwidget.cpp  tsfilehandler.cpp  tstreewidget.cpp
